--- a/assets/src/css/media.css
+++ b/assets/src/css/media.css
@@ -94,4 +94,20 @@
             }
         }
     }
+
+      /* section boxes */
+    .boxes{
+        padding-top: 0;
+        .container{
+            &.flex{
+                flex-wrap: wrap;
+            }
+            .box{
+                width: 100%;
+                p{
+                    font-size: 22px;
+                }
+            }
+        }
+    }
 }
