--- a/assets/src/css/media.css
+++ b/assets/src/css/media.css
@@ -1,3 +1,13 @@
+@media screen and (max-width: 2524px){
+    /* header section */
+    header{
+        height: 30%;
+        padding-bottom: 200px;
+    }
+
+    
+}
+
 @media  screen and (max-width: 700px) {
     /* navbar media */
 
@@ -109,7 +119,7 @@
             }
         }
     }
-     /* section About */
+    /* section About */
 
     .aboutUs{
         .container{
