--- a/assets/src/css/media.css
+++ b/assets/src/css/media.css
@@ -37,7 +37,7 @@
 
 
 
-.digitalBook{
+/* .digitalBook{
     text-align: center;
     display: flex;
     justify-content: center;
@@ -53,7 +53,7 @@
         background-color:var(--mainColor) ;
         
     }
-}
+} */
 
    /* Blog section */
 
@@ -243,7 +243,7 @@
 
    /* Digital Book  */
 
-   .digitalBook{
+   /* .digitalBook{
     text-align: center;
     display: flex;
     justify-content: center;
@@ -259,7 +259,7 @@
         background-color:var(--mainColor) ;
         
     }
-}
+} */
    
 
 }
