edit with in footer section

--- a/assets/src/css/style.css
+++ b/assets/src/css/style.css
@@ -574,9 +574,12 @@ header{
                 justify-content: space-between;
         }
         .imageText{
-            width: 20%;
+            width: 40%;
             img{
                 width: 20%;
+            }
+            p{
+                width: 100%;
             }
            
         }
